k8s/review-rating.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: review-rating-service
  namespace: clahanstore
spec:
  serviceName: review-rating-service
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: review-rating-service
  template:
    metadata:
      labels:
        app: review-rating-service
    spec:
      containers:
      - name: review-rating-service
        image: team4devops/ecommerce-review-rating-service:v1.0.0
        ports:
        - containerPort: 3012
        resources:
          requests:
            cpu: 25m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 3012
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 3012
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
