k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: clahanstore
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-ui
  namespace: clahanstore
spec:
  selector:
    app: frontend-ui
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: review-rating-service
  namespace: clahanstore
spec:
  clusterIP: None
  selector:
    app: review-rating-service
  ports:
  - port: 3012
    targetPort: 3012

---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: clahanstore
spec:
  selector:
    app: api-gateway
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
