k8s/review-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: review-http-route
  namespace: clahanstore
spec:
  parentRefs:
  - name: ecommerce-gateway
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
      - name: review-rating-service
        namespace: clahanstore
        port: 3012
